# rtbcat-platform

./: .claudeignore  .dockerignore  .env.example  .gitignore  .gitleaksignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FINDINGS.md  COMPLETION_PLAN.md  CONTRIBUTING.md  CREATIVE_CACHE.md  Caddyfile  DATA_MODEL.md  DATA_SCIENCE_EVALUATION.md  DEPLOYMENT_ISSUES.md  Dockerfile  Edgar RTB System.md  INSTALL.md  LICENSE  MCP_INTEGRATION.md  METRICS_GUIDE copy.md  METRICS_GUIDE.md  Makefile  NAVIGATION_REORGANIZATION_PLAN.md  PHASE_3_INVESTIGATION_REPORT.md  PLAN-clerk-terraform-auth.md  PLAN-i18n-implementation.md  PLAN-multi-user-accounts.md  PLAN.md  PLAN_CREATIVE_GEO_DISPLAY.md  README-en.md  README.md  ROADMAP.md  Robyn-Summary.md  SECURITY.md  api-skill.md  cat-scan-Billingid-reached.csv  (+18 more)
.claude/: claude.md  settings.local.json
.github/: pull_request_template.md
analysis/: __init__.py  evaluation_engine.py
analytics/: README.md  __init__.py  cli_size_analyzer.py  config_analyzer.py  cost_estimator.py  creative_analyzer.py  evaluation_engine.py  fraud_analyzer.py  geo_analyzer.py  geo_waste_analyzer.py  pretargeting_recommender.py  qps_optimizer.py  recommendation_engine.py  rtb_bidstream_analyzer.py  size_analyzer.py  size_coverage_analyzer.py  waste_analyzer.py  waste_models.py
api/: __init__.py  auth.py  auth_authing.py  auth_bootstrap.py  auth_oauth_proxy.py  auth_password.py  auth_providers.py  auth_public_paths.py  auth_v2.py  campaigns_router.py  dependencies.py  main.py  read_only_shadow.py  request_trust.py  (+2 more)
(+1664 files in other folders)
