[project]
name = "rtbcat-platform"
version = "0.9.2"
description = "QPS optimization platform for Google Authorized Buyers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"

[tool.setuptools]
packages = ["analytics", "api", "collectors", "config", "importers", "services", "storage", "utils"]
